--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container{
 	width: 100%;
 	height: 100vh;
-	background-image: url(images/background.jpg);
+	background-image: url(background.jpg);
 	background-size: cover;
 	background-position: center;
 	display: flex;
